# OculusRiftInAction

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/cpp/: CMakeLists.txt  Example_2_1_SDK.cpp  Example_2_2_Tracker.cpp  Example_2_3_Display.cpp  Example_2_4_HelloRift.cpp  Example_3_3_Tracker.cpp  Example_3_5_TrackerPrediction.cpp  Example_4_2_DisplayTargeting.cpp  Example_4_3_0_Undistorted.cpp  Example_4_3_1_Distorted.cpp  Example_5_1_Monoscopic.cpp  Example_5_2_Stereoscopic.cpp  Example_5_3_RiftRendered.cpp  Example_5_4_RiftSensors.cpp  Example_5_5_RiftTimewarp.cpp  Example_6_TextureSize.cpp  Example_8_AsyncTimewarp.cpp  Example_8_TextureSize.cpp  Example_9_AsyncTimewarp.cpp  Example_9_TextureSize.cpp  Example_SelfContained.cpp  Example_X_ClientSideDistortion.cpp  Example_X_Direct3dInterop.cpp  Example_X_MouseToRay.cpp  Example_X_Orthographic.cpp  Example_X_ShaderQuality.cpp  GenerateDistortionMesh.cpp
examples/cpp/common/: CMakeLists.txt  Cegui.cpp  Cegui.h  Chapter_5.cpp  Chapter_5.h  Common.cpp  Common.h  Config.h.in  CubeScene.cpp  CubeScene.h  Files.cpp  Files.h  Font.cpp  Font.h  GlMesh.cpp  GlMesh.h  GlUtils.cpp  GlUtils.h  GlfwApp.cpp  GlfwApp.h  GlslEditor.cpp  GlslEditor.h  Hid.h  IO.h  Interaction.cpp  Interaction.h  OpenCV.h  OvrUtils.h  Platform.cpp  Platform.h  QtUtils.cpp  QtUtils.h  Rift.cpp  Rift.h  RiftApp.cpp  RiftApp.h  RiftGlfwApp.cpp  RiftGlfwApp.h  RiftQtApp.cpp  RiftQtApp.h  (+9 more)
examples/cpp/experimental/: CalibrateCamera.cpp  ExampleCalibrateStrabismusCorrection.cpp  Example_8_AsyncTimewarp.cpp  Example_Qt.cpp  Example_SelfContainedD3D.cpp  Example_X_ClientSideDistortion.cpp  Example_X_Direct3dInterop.cpp  Example_X_MouseToRay.cpp  Example_X_Orthographic.cpp  LedTrackingTest.cpp  ScratchApp.cpp
examples/cpp/gui/: Example_10_Shaderfun.cpp  Example_Qt.cpp  Shadertoy.h
examples/cpp/old_and_busted/: Copy of ExampleWork.cpp  ExampleCalibrateStrabismusCorrection.cpp  ExampleFly.cpp  ExampleHydra.cpp  ExampleLatencyTester.cpp  ExampleLeap.cpp  ExamplePlanet.cpp  ExamplePositionalTracking.cpp  ExampleSensorFeed.cpp  ExampleSensorIntegration.cpp  ExampleWork.cpp  Example_4_3_1_Display2d.cpp  Example_4_3_2_Display2dAspectCorrected.cpp  Example_4_3_2_ShaderLookupDistortWithChroma.cpp  Example_4_3_3_Display2dLensCorrected.cpp  Example_4_4_Display2dRiftTargetedImages.cpp  Example_4_4_Display2dStereoscopic.cpp  Example_5_2_1_ShaderDirectDistort.cpp  Example_5_2_3_MeshDistort.cpp  Example_5_2_5_FrameBufferResolution.cpp  Example_5_2_RenderingQuality.cpp  Example_5_3_FieldOfView.cpp  Example_5_x_Scene.cpp  Example_7_1_RenderScene.cpp  Example_7_2_HeadOnAStick.cpp  Example_8_X_Bad_01_ScaleUI.cpp  Example_8_X_Bad_02_SwivelUI.cpp  Example_8_X_LatencyTester.cpp  FrustrumDemo.cpp  (+1 more)
libraries/OpenCTM/: CMakeLists.txt  openctm.c  openctm.h  openctmpp.cpp  openctmpp.h
resources/: CMakeLists.txt  ExampleResources.cpp.in  ExampleResources.h.in  ResourceEnums.cpp.in  ResourceEnums.h.in  Resources.cmake  Resources.cpp  Resources.cpp.in  Resources.h  Resources.h.in  Resources.rc.in  ResourcesImpl.cpp  pom.xml
resources/meshes/: Hydra_Frozen_High.ctm  bun_zipper.ctm  bunny2.ctm  cone.ctm  cylinder.ctm  frustum.ctm  head.ctm  hemi.ctm  ico-sphere.ctm  ico.ctm  rift.ctm  sphere.ctm  torus.ctm
resources/misc/: skybox.xml
resources/shaders/: CubeMap.vs  DirectDistort.fs  DisplacementMapDistort.fs  Example_5_1_1.fs  Example_5_1_2.fs  Example_5_1_2.vs  Example_5_1_3.fs  Example_5_1_3.vs  Example_5_2_4_Warp.fs  GenerateDisplacementMap.fs  Lit.fs  Lit.vs  Planet.fs  Planet.vs  RiftChromaWarp.fs  RiftChromaWarpMultisample.fs  RiftWarp.fs  RiftWarpDirect.fs  RiftWarpMultisample.fs  Simple.fs  Simple.vs  Text.fs  Text.vs  Texture.fs  TextureBlur.fs  TextureRift.vs  Textured.fs  Textured.vs  VertexToRift.vs  VertexToTexture.vs
source/: CMakeLists.txt  ExampleCalibrateStrabismusCorrection.cpp  ExampleWebcamVideo.cpp  ExampleWork.cpp  Example_2_1_SDK.cpp  Example_2_2_Tracker.cpp  Example_2_3_Display.cpp  Example_2_4_HelloRift.cpp  Example_3_3_Tracker.cpp  Example_3_5_TrackerPrediction.cpp  Example_4_2_DisplayTargeting.cpp  Example_4_3_0_Undistorted.cpp  Example_4_3_1_Display2d.cpp  Example_4_3_1_Distorted.cpp  Example_4_3_2_Display2dAspectCorrected.cpp  Example_4_3_3_Display2dLensCorrected.cpp  Example_4_3_a_Display2d.cpp  Example_4_4_Display2dRiftTargetedImages.cpp  Example_4_4_Display2dStereoscopic.cpp  Example_5_1_1_PostProcessBlur.cpp  Example_5_1_2_PostProcessDistort.cpp  Example_5_1_3_PostProcessDistortRiftImages.cpp  Example_5_2_0_Undistorted.cpp  Example_5_2_1_ShaderDirectDistort.cpp  Example_5_2_1_Undistorted.cpp  Example_5_2_2_ShaderLookupDistort.cpp  Example_5_2_3_MeshDistort.cpp  Example_5_2_4_ShaderDirectDistort.cpp  Example_5_2_5_FrameBufferResolution.cpp  Example_5_2_5_ShaderLookupDistortWithChroma.cpp  Example_5_2_RenderingQuality.cpp  Example_6_1_Monoscopic.cpp  Example_6_1_RenderScene.cpp  Example_6_2_RenderScene.cpp  Example_6_2_Stereoscopic.cpp  Example_6_3_RiftRendered.cpp  Example_7_1_RenderScene.cpp  Example_7_2_HeadOnAStick.cpp  Example_8_X_Bad_01_ScaleUI.cpp
source/Example00/: CMakeLists.txt  Distort.fs  Distort.vs  Example00.cpp  Example00.rc  Simple.fs  Simple.vs  Texture.fs  Texture.vs  resource.h
source/Example05_Tracker/: CMakeLists.txt  Example05.cpp
source/ExampleCommon/: CMakeLists.txt  Common.cpp  Common.h  Files.cpp  Files.h  Font.cpp  Font.h  GlUtils.cpp  GlUtils.h  GlfwApp.cpp  GlfwApp.h  IO.h  Rift.cpp  Rift.h  Types.h  Vertex.h
source/ExampleGL/: CMakeLists.txt  GlBuffers.h  GlDebug.h  GlFrameBuffer.h  GlGeometry.h  GlLighting.h  GlMethods.h  GlShaders.h  GlStacks.h  GlTexture.h  GlVertexArrays.h
source/common/: CMakeLists.txt  Common.cpp  Common.h  Config.h.in  Files.cpp  Files.h  Font.cpp  Font.h  GlMesh.cpp  GlMesh.h  GlUtils.cpp  GlUtils.h  GlfwApp.cpp  GlfwApp.h  Hid.cpp  IO.h  Interaction.cpp  Interaction.h  OpenCV.cpp  Rift.cpp  Rift.h  Shaders.cpp.in  Shaders.h.in  Types.h
source/opencv/: ExampleDistort.cpp  ExamplePositionalTracking.cpp  ExampleWebcamVideo.cpp
source/steamworks/: Example_Steamworks.cpp
(+299 files in other folders)
